<resources>
    <string name="app_name">tubes</string>
    <string name="deskripsi1">Aplikasi ini berguna untuk memberikan diagnosa awal untuk mengetahui penyakit apa yang diderita dan pemberian penanganan awal serta kontak dokter yang tepat.</string>
    <string name="deskripsi2">Aplikasi Diagnosa Awal Penyakit Umum\nPuskesmas Mobile 2020\nManaged and Created by:</string>
    <string name="flu1">Flu merupakan penyakit yang disebabkan oleh infeksi virus yang dapat menyerang hidung, tenggorokan, dan paru-paru. Flu atau influenza ini sangat umum terjadi di musim pancaroba. Penyakit ini sangat mudah menular ke orang lain, terutama ketika 3-4 hari pertama setelah pengidapnya terinfeksi virus flu.</string>
    <string name="flu2">Umumnya flu dapat sembuh dengan sendirinya. Langkah pengobatannya adalah istirahat yang cukup, banyak minum, serta menjaga tubuh agar tetap hangat. Disarankan bagi pengidap untuk mengonsumsi obat penurun demam. Obat penurun demam juga dapat mengurangi gejala nyeri dan pegal dari flu. Pengidap tidak dianjurkan mengonsumsi antibiotik karena obat ini berfungsi membunuh bakteri, sedangkan flu disebabkan oleh virus.</string>
    <string name="flu3">Jika dirasa gejala flu semakin parah dan berisiko komplikasi, segeralah hubungi dokter dengan mengklik tombol dibawah guna mendapat penanganan yang tepat.</string>
    <string name="tbc1">Tuberkulosis (TB) yang juga dikenal dengan singkatan TBC merupakan penyakit menular yang menyebabkan masalah kesehatan terbesar kedua di dunia setelah HIV. Penyakit ini disebabkan oleh basil dari bakteri Mycobacterium tuberculosis. Tuberkulosis sendiri dapat menyerang bagian tubuh manapun, tetapi yang tersering dan paling umum adalah infeksi tuberkulosis pada paru-paru.</string>
    <string name="tbc2">Dokter biasanya menggunakan beberapa cara untuk mendiagnosis penyakit ini, seperti rontgen dada, tes Mantoux, tes darah, dan tes dahak. Hal tersebut dikarenakan tuberkulosis adalah penyakit yang sulit dideteksi, terutama jika pengidapnya adalah anak-anak. Dengan pengobatan yang benar, penyakit yang serius ini bisa disembuhkan. Langkah pengobatan yang dibutuhkan adalah dengan mengonsumsi beberapa jenis obat antituberkulosis yang harus diminum selama jangka waktu tertentu, minimal 6 bulan.</string>
    <string name="tbc3">Segera hubungi dokter dengan mengklik tombol di bawah jika mengalami gejala-gejala yang telah dipaparkan tadi. Penanganan yang tepat dan cepat dapat meminimalisir komplikasi yang mungkin terjadi. </string>
    <string name="why1">Ini terjadi karena masih terbatasnya kemampuan aplikasi dalam melakukan diagnosa dikarenakan masih dalam tahap pengembangan.</string>
    <string name="why2">Jika dirasa gejala memerlukan penanganan dokter, silahkan hubungi dokter dengan klik tombol "Call a Doctor" atau buat Appointment via sms dengan klik tombol "SMS to Doctor". Layanan dibawah tersedia 24/7 setiap hari kerja kecuali Hari Libur.</string>
</resources>
