<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Flu">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/flu"/>
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="100dp"
        android:layout_marginBottom="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Diagnosa Sementara Menunjukan\nAnda Terkena Flu"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="160dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="165dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apa Itu Penyakit Flu?"
                android:textColor="#3792cb"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView
            android:layout_width="300dp"
            android:layout_height="130dp"
            android:text="@string/flu1"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="310dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="200dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pengobatan Flu"
                    android:textColor="#3792cb"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:text="@string/flu2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="510dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="147dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kapan Harus ke Dokter?"
                    android:textColor="#3792cb"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:text="@string/flu3"/>
            <Button
                android:id="@+id/smsdoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SMS to Doctor"
                android:drawableLeft="@android:drawable/sym_action_email"
                android:background="@drawable/button"
                android:textColor="#FFF"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>