<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tbc">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/tbc"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="100dp"
            android:layout_marginBottom="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Diagnosa Sementara Menunjukan\nAnda Terkena TBC"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="160dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="160dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Apa Itu Penyakit TBC?"
                    android:textColor="#3792cb"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:layout_width="300dp"
                android:layout_height="230dp"
                android:text="@string/tbc1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="360dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="190dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pengobatan TBC"
                    android:textColor="#3792cb"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:text="@string/tbc2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="590dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="186dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Segera ke Dokter!"
                    android:textColor="#3792cb"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:text="@string/tbc3"/>
            <Button
                android:id="@+id/calldoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Call a Doctor"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:background="@drawable/button"
                android:textColor="#FFF"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>